[gd_scene load_steps=12 format=3 uid="uid://5mo22e3ci4vu"]

[ext_resource type="Script" path="res://characters/Miner/player.gd" id="1_vs1wh"]
[ext_resource type="Texture2D" uid="uid://cpkmht4mou57b" path="res://characters/Miner/miner.png" id="3_lax2r"]
[ext_resource type="PackedScene" uid="uid://cmgkom8c8hvly" path="res://OldFilesFromDemo2/gun.tscn" id="3_viovp"]
[ext_resource type="Script" path="res://characters/Miner/light.gd" id="4_8drag"]
[ext_resource type="Texture2D" uid="uid://clswnbo5o1ir0" path="res://characters/Miner/light.png" id="4_80wto"]
[ext_resource type="Script" path="res://characters/Miner/throw.gd" id="6_wwf4s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_63j6a"]
radius = 28.4605

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ou5wt"]
size = Vector2(161.109, 96.7283)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w0t54"]
bg_color = Color(0.303233, 0.303233, 0.303233, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yewec"]
bg_color = Color(0, 0.582465, 5.77569e-07, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_tgff5"]
radius = 2720.53

[node name="Player" type="CharacterBody2D" groups=["PlayersLight", "player"]]
scale = Vector2(0.55, 0.55)
script = ExtResource("1_vs1wh")

[node name="Miner" type="Sprite2D" parent="."]
position = Vector2(-7.62939e-06, -41.8182)
scale = Vector2(0.189982, 0.187848)
texture = ExtResource("3_lax2r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_63j6a")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Gun" parent="." instance=ExtResource("3_viovp")]
visible = false
position = Vector2(-3, -37)
script = null

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
light_mask = 0
visibility_layer = 2
position = Vector2(-1, -4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, -36)
rotation = -1.56831
scale = Vector2(0.755, 0.755)
shape = SubResource("RectangleShape2D_ou5wt")
debug_color = Color(0.976029, 0, 0.414963, 0.42)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -156.0
offset_top = -175.0
offset_right = 158.0
offset_bottom = -152.0
theme_override_styles/background = SubResource("StyleBoxFlat_w0t54")
theme_override_styles/fill = SubResource("StyleBoxFlat_yewec")
step = 0.0
value = 100.0
show_percentage = false

[node name="light" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(-3.63636, -156.364)
script = ExtResource("4_8drag")

[node name="CollisionShape2D" type="CollisionShape2D" parent="light"]
position = Vector2(0, 110.909)
shape = SubResource("CircleShape2D_tgff5")
debug_color = Color(0.642286, 0.52375, 0, 0.42)

[node name="Lantern" type="PointLight2D" parent="light/CollisionShape2D"]
position = Vector2(-29.0908, -120)
scale = Vector2(1.86644, 1.86416)
color = Color(1, 1, 0.298039, 1)
energy = 2.38
texture = ExtResource("4_80wto")
texture_scale = 4.65

[node name="Throw" type="Node2D" parent="."]
script = ExtResource("6_wwf4s")

[node name="Start1" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "Where are you?
There’s squeaking skittering all around"

[node name="Start2" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "The ground is cold and hard, 
though less than the fading chill that seemed to wrap itself around your very bones"

[node name="Start3" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "The warmth is welcome, you look to find the cause and, oh, it’s a lantern"

[node name="Pickup1" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "The shadows seem to stick and cling to the edges of the light 
like they are reluctant to go"

[node name="Pickup2" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "As the lantern swings crystals glint and glitter
It’s kind of beautiful
"

[node name="Pickup3" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "But you can't stay here"

[node name="LV2-1" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "The whispers are getting louder, clearer.  The animals seem quieter, almost nervous."

[node name="LV2-2" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "You want to say something, 
but the words stick in your throat before you can bring yourself to speak."

[node name="LV2-3" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "Glass crunches underfoot.  Is that a lantern?  It looks an awful lot like your’s.
There’s a sense of familiarity in the air, but you can't stay here
"

[node name="LV2E-1" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "Fresh air?"

[node name="LV2E-2" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "The wind is blowing!"

[node name="LV2E-3" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "Finally you’re outside!"

[node name="End1" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "The cold, fresh air hits your face. 
 It’s night, stars glitter in greeting and the moon… "

[node name="End2" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "…It must be behind you?
…No, that’s not right. "

[node name="End3" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -321.818
offset_top = 49.0909
offset_right = 321.182
offset_bottom = 100.091
theme_override_font_sizes/font_size = 25
text = "You remember now, this much at least.  
The sun is long gone and the moon with it.  
The cold and distant stars twinkle in the endless dark.  
The only thing left is to keep the light on."

[node name="Death1" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -110.909
offset_top = 58.1818
offset_right = 115.091
offset_bottom = 109.182
theme_override_font_sizes/font_size = 25
text = "The dark is so loud
"

[node name="Death2" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -187.273
offset_top = 50.9091
offset_right = 192.727
offset_bottom = 101.909
theme_override_font_sizes/font_size = 25
text = "You can hear it so much clearer"

[node name="Death3" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -47.2727
offset_top = 54.5455
offset_right = 49.7273
offset_bottom = 105.545
theme_override_font_sizes/font_size = 25
text = "It says…"

[node name="OverlapL1" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -138.182
offset_top = 38.1818
offset_right = -41.1818
offset_bottom = 89.1818
theme_override_font_sizes/font_size = 25
text = "go back
"

[node name="OverlapL2" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -29.0909
offset_top = 34.5455
offset_right = 20.9091
offset_bottom = 85.5455
theme_override_font_sizes/font_size = 25
text = "stay
"

[node name="OverlapL3" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = 50.9091
offset_top = 74.5455
offset_right = 147.909
offset_bottom = 125.545
theme_override_font_sizes/font_size = 25
text = "help
"

[node name="OverlapL4" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -141.818
offset_top = 72.7273
offset_right = 27.1818
offset_bottom = 145.727
theme_override_font_sizes/font_size = 25
text = "it’s dangerous

"

[node name="OverlapL5" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = 30.9091
offset_top = 34.5455
offset_right = 127.909
offset_bottom = 107.545
theme_override_font_sizes/font_size = 25
text = "please

"

[node name="OverlapL6" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -14.5455
offset_top = 69.0909
offset_right = 82.4545
offset_bottom = 120.091
theme_override_font_sizes/font_size = 25
text = "go back
"

[node name="OverlapL7" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -125.455
offset_top = 72.7273
offset_right = -75.4545
offset_bottom = 123.727
theme_override_font_sizes/font_size = 25
text = "stay
"

[node name="OverlapL8" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -121.818
offset_top = 40.0
offset_right = -24.8182
offset_bottom = 91.0
theme_override_font_sizes/font_size = 25
text = "help
"

[node name="OverlapL9" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -74.5455
offset_top = 40.0
offset_right = 94.4545
offset_bottom = 113.0
theme_override_font_sizes/font_size = 25
text = "it’s dangerous

"

[node name="OverlapL10" type="Label" parent="."]
visible = false
visibility_layer = 512
offset_left = -80.0
offset_top = 40.0
offset_right = 17.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 25
text = "please

"

[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
